[package]
name = "goauth"
version = "0.14.0"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Crate for authenticating Server to Server Apps for Google Cloud Engine."
repository = "https://github.com/durch/rust-goauth"
readme = "README.md"
keywords = ["Google", "Cloud", "Engine", "Server", "OAuth"]
license = "MIT"
documentation = "https://durch.github.io/rust-goauth"
edition = "2018"

[lib]
name = "goauth"
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
serde = "^1"
serde_derive = "1"
serde_json = "1"
time = "0.3"
log = "0.4"
smpl_jwt = {version = "0.8.0", default-features = false}
reqwest = { version = "0.11", features = ["blocking", "json"], default-features = false }
futures = "0.3"
simpl = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
doc-comment = "0.3"
mockito = "0.31"

[features]
default = ["reqwest/default-tls"]
vendored-ssl = ["smpl_jwt/vendored", "reqwest/native-tls-vendored"]

