[package]
name = "goauth"
version = "0.17.0-alpha.1"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Crate for authenticating Server to Server Apps for Google Cloud Engine."
repository = "https://github.com/durch/rust-goauth"
readme = "README.md"
keywords = ["Google", "Cloud", "Engine", "Server", "OAuth"]
license = "MIT"
documentation = "https://durch.github.io/rust-goauth"
edition = "2018"

[lib]
name = "goauth"
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "0.3"
log = "0.4"
smpl_jwt = { version = "0.8.0", default-features = false }
attohttpc = { version = "0.28", features = ["json", "form"] }
simpl = "0.1"

[dev-dependencies]
doc-comment = "0.3"
mockito = "0.31"

[features]
vendored-ssl = ["smpl_jwt/vendored"]
